--- a/css/basic.css
+++ b/css/basic.css
@@ -26,4 +26,5 @@ a {
   --grey-color: #3C3939;
   --grey-color-light: #575757;
   --white-color: #fff;
+  --card-shadow: 1px 2px 5px var(--grey-color-light);
 }
