--- a/css/basic.css
+++ b/css/basic.css
@@ -25,6 +25,7 @@ a {
   --tertiary-color: #129B51;
   --grey-color: #3C3939;
   --grey-color-light: #575757;
+  --grey-color-transparent: rgba(88, 88, 88, 0.09);
   --white-color: #fff;
   --card-shadow: 1px 2px 5px var(--grey-color-light);
 }
