--- a/css/components.css
+++ b/css/components.css
@@ -104,7 +104,6 @@ img.avatar {
 .input-group {
   position: relative;
   padding: 15px 0 0;
-  margin-top: 10px;
   width: 100%;
 }
 
@@ -142,6 +141,30 @@ img.avatar {
   display: block;
   transition: 0.2s;
   font-size: 1rem;
+}
+
+.input-group textarea {
+  resize: none;
+  position: relative;
+  background-color: var(--grey-color-transparent);
+  padding: 8px;
+}
+
+/* select-input */
+
+select {
+  min-width: 200px;
+  padding: 8px 2px;
+  background-color: var(--grey-color-transparent);
+  border: none;
+  border-bottom: 2px solid var(--primary-color-dark);
+  outline: none;
+  font-size: 16px;
+}
+
+select option[value="placeholder"] {
+  color: var(--primary-color-dark);
+  font-weight: 600;
 }
 
 /* modal */
@@ -192,11 +215,16 @@ a.modal-background {
 .modal {
   border-radius: 4px;
   position: relative;
-  width: 500px;
+  width: 700px;
   max-width: 90%;
   background: #fff;
   padding: 1em 2em;
   z-index: 100;
+}
+
+.modal h1 {
+  text-align: center;
+  margin-bottom: 24px;
 }
 
 a.modal-close-btn {
@@ -208,6 +236,24 @@ a.modal-close-btn {
   z-index: 110;
 }
 
+/* add-question-modal */
+
+.question-modal .top,
+.question-modal .right,
+.question-modal .left {
+  display: flex;
+  justify-content: space-between;
+}
+
+.question-modal .top > * {
+  flex-direction: column;
+  width: 200px;
+}
+
+.question-modal .top > div > * {
+  margin-bottom: 10px;
+}
+
 /* quetion-block */
 
 .question-wrapper {
@@ -216,7 +262,7 @@ a.modal-close-btn {
   padding-bottom: 6px;
   background: var(--white-color);
   border-radius: 5px;
-  margin: 5em auto;
+  margin: 0 auto;
   height: 160px;
   width: 100%;
   display: flex;
@@ -301,12 +347,21 @@ p {
 .container {
   width: 100%;
   max-width: 750px;
-  margin: 50px auto;
+  margin: 80px auto;
   padding: 0 8px;
 }
 
-.container > * {
+.container .question-wrapper {
   margin: 36px 0;
+}
+
+.container .buttons-wrapper {
+  display: flex;
+}
+
+.container .buttons-wrapper .add-question {
+  flex: 1;
+  margin-right: 18px;
 }
 
 /* options menu */
@@ -361,7 +416,7 @@ div.dropdown li {
 }
 
 div.dropdown li:hover {
-  background-color: #58585822;
+  background-color: var(--grey-color-transparent);
 }
 
 div.dropdown li i {
@@ -369,20 +424,43 @@ div.dropdown li i {
 }
 
 div.dropdown li:last-child {
-  border-top: 1px solid #58585844;
+  border-top: 1px solid var(--grey-color-transparent);
 }
 
 /* primary-button */
 
-.btn {
+.btn, .btn-secondary {
   background-color: var(--primary-color-dark);
   border: none;
   outline: none;
   border-radius: 9999px;
   padding: 10px 18px;
   color: var(--white-color);
-  text-transform: uppercase;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn i {
+  margin-right: 5px;
+}
+
+.btn-secondary {
+  border-radius: 8px;
+  color: var(--primary-color-dark);
+  padding: 24px;
+  letter-spacing: 1.2px;
+  font-size: 16px;
+  background-color: transparent;
+  border: 2px solid var(--primary-color-dark);
+  transition: all 300ms ease;
+  width: 100%;
+}
+
+.btn-secondary:hover {
+  background-color: var(--primary-color-dark);
+  color: var(--white-color);
 }
 
 /* card */
@@ -397,4 +475,15 @@ div.dropdown li:last-child {
   max-width: 160px;
   display: flex;
   flex-direction: column;
+}
+
+/* divider */
+
+.divider {
+  width: 100%;
+  height: 1px;
+  margin: 12px 0;
+  border-radius: 9999px;
+  background-color: var(--grey-color-light);
+  opacity: .4;
 }
