--- a/css/components.css
+++ b/css/components.css
@@ -323,17 +323,17 @@ img.avatar {
   display: none;
 }
 
-.checkbox-group input[type="checkbox"]:checked + label {
+.checkbox-group input:checked + label {
   border: 2px solid var(--primary-color-dark);
   background-color: var(--primary-color);
   color: var(--white-color);
   transition: all 0.2s;
 }
 
-.checkbox-group input[type="checkbox"] {
+.checkbox-group input {
   display: absolute;
 }
-.checkbox-group input[type="checkbox"] {
+.checkbox-group input {
   position: absolute;
   opacity: 0;
 }
