--- a/css/components.css
+++ b/css/components.css
@@ -654,6 +654,44 @@ div.dropdown li:last-child {
   border-top: 1px solid var(--grey-color-transparent);
 }
 
+/* dropdown-menu */
+
+.dropdown-menu {
+  position: relative;
+}
+
+.dropdown-menu input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+}
+
+.dropdown-menu label i {
+  transition: all 0.4s ease;
+}
+
+.dropdown-menu label h2 {
+  padding: 8px;
+  background-color: var(--grey-color-transparent);
+  border-bottom: 2px solid var(--primary-color-dark);
+  cursor: pointer;
+}
+
+.dropdown-menu .slide {
+  padding: 0 8px;
+  height: 0;
+  overflow: hidden;
+  transition: all 0.4s ease;
+}
+
+.dropdown-menu input[type="checkbox"]:checked ~ label i {
+  transform: rotate(90deg);
+}
+
+.dropdown-menu input[type="checkbox"]:checked ~ .slide {
+  padding: 16px 8px;
+  height: max-content;
+}
+
 /* buttons */
 
 .btn,
@@ -713,6 +751,14 @@ div.dropdown li:last-child {
   max-width: 250px;
 }
 
+/* teacher-card */
+
+.teacher-card {
+  min-width: 100%;
+  max-width: 100%;
+  margin: 0;
+}
+
 /* divider */
 
 .divider {
@@ -743,8 +789,10 @@ div.dropdown li:last-child {
 }
 
 .text-block.dark {
-  padding: 0 16px;
-  background-color: var(--grey-color);
+  padding: 1px 6px;
+  background-color: var(--grey-color-lighter);
+  border-radius: 6px;
+  font-weight: 300;
 }
 
 .btn-close {
@@ -779,6 +827,11 @@ div.dropdown li:last-child {
   justify-content: space-between;
 }
 
+.justify-around {
+  display: flex;
+  justify-content: space-between;
+}
+
 .align-center {
   display: flex;
   align-items: center;
@@ -809,4 +862,11 @@ div.dropdown li:last-child {
 .disabled {
   pointer-events: none;
   opacity: 0.4;
+}
+
+.grid-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, min-content);
+  gap: 18px;
 }
