--- a/css/basic.css
+++ b/css/basic.css
@@ -30,3 +30,12 @@ a {
   --white-color: #fff;
   --card-shadow: 1px 2px 5px var(--grey-color-light);
 }
+
+i {
+  color: var(--grey-color);
+}
+
+i a {
+  color: var(--grey-color);
+  font-size: 20px;
+}
