refactored the project and created subject.html

--- a/css/components.css
+++ b/css/components.css
@@ -48,7 +48,7 @@ nav ul li:hover a {
 }
 
 nav ul li a.active {
-  color: var(--primary-color-dark);
+  color: var(--primary-color);
 }
 
 /* drawer */
@@ -440,84 +440,6 @@ a.modal-close-btn {
   max-width: 100px;
 }
 
-/* add-question-modal */
-
-.question-modal .top,
-.question-modal .right,
-.question-modal .left {
-  display: flex;
-  justify-content: space-between;
-}
-
-.question-modal .top > * {
-  flex-direction: column;
-  width: 200px;
-}
-
-.question-modal .top > div > * {
-  margin-bottom: 10px;
-}
-
-/* quetion-block */
-
-.question-wrapper {
-  box-shadow: var(--card-shadow);
-  padding: 12px;
-  padding-bottom: 6px;
-  background: var(--white-color);
-  border-radius: 5px;
-  margin: 0 auto;
-  min-height: 160px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.question-wrapper > div {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.question-wrapper p {
-  margin: 14px 0;
-}
-
-.question-wrapper > div:last-child {
-  text-align: center;
-  margin-top: auto;
-}
-
-.question-wrapper > div:last-child > h5 {
-  display: flex;
-  align-items: center;
-}
-
-.question-wrapper > div:last-child > h5 > strong {
-  margin: 0 4px;
-}
-
-.question-wrapper .level {
-  display: block;
-  width: 8px;
-  height: 8px;
-  margin-right: 2px;
-  border-radius: 9999px;
-  background-color: var(--primary-color);
-}
-
-.question-wrapper .level.easy {
-  background-color: var(--tertiary-color);
-}
-
-.question-wrapper .level.medium {
-  background-color: var(--secondary-color);
-}
-
-.question-wrapper i {
-  cursor: pointer;
-}
-
 /* Text */
 
 h1,
@@ -691,7 +613,7 @@ div.dropdown li:last-child {
 }
 
 .dropdown-menu input[type="checkbox"]:checked ~ .slide {
-  padding: 16px 8px;
+  padding: 24px 8px;
 }
 
 /* buttons */
@@ -738,9 +660,8 @@ div.dropdown li:last-child {
   padding: 12px;
   background: var(--white-color);
   border-radius: 5px;
-  margin: 5em auto;
+  margin: 0 auto;
   width: 100%;
-  max-width: 160px;
   display: flex;
   flex-direction: column;
 }
@@ -830,9 +751,19 @@ div.dropdown li:last-child {
   display: flex;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 .justify-between {
   display: flex;
   justify-content: space-between;
+}
+
+.justify-center {
+  display: flex;
+  justify-content: center;
 }
 
 .justify-around {
