--- a/css/components.css
+++ b/css/components.css
@@ -578,42 +578,21 @@ div.dropdown li:last-child {
 
 /* dropdown-menu */
 
-.dropdown-menu {
-  position: relative;
-}
-
-.dropdown-menu input[type="checkbox"] {
-  position: absolute;
-  opacity: 0;
-}
-
-.dropdown-menu label i {
+.dropdown-menu i {
   transition: all 0.4s ease;
 }
 
-.dropdown-menu label h2 {
+.dropdown-menu h2 {
   padding: 8px;
   background-color: var(--grey-color-transparent);
   border-bottom: 2px solid var(--primary-color-dark);
   cursor: pointer;
 }
 
-.dropdown-menu .slide {
-  padding: 0 8px;
+.dropdown-menu .panel {
+  max-height: 0;
   overflow: hidden;
   transition: all 0.4s ease;
-}
-
-.dropdown-menu input[type="checkbox"]:checked ~ label i {
-  transform: rotate(90deg);
-}
-
-.dropdown-menu input[type="checkbox"]:not(:checked) ~ .slide {
-  height: 0px;
-}
-
-.dropdown-menu input[type="checkbox"]:checked ~ .slide {
-  padding: 24px 8px;
 }
 
 /* buttons */
@@ -805,8 +784,10 @@ div.dropdown li:last-child {
 
 .grid-wrapper {
   display: grid;
+  padding: 24px 8px;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(1, min-content);
+  grid-template-rows: repeat(1, minmax(200px, max-content));
+  grid-auto-flow: row;
   gap: 18px;
 }
 
