--- a/css/components.css
+++ b/css/components.css
@@ -51,13 +51,30 @@ nav ul li a.active {
   color: var(--primary-color);
 }
 
+/* scrollbar */
+
+body::-webkit-scrollbar {
+  width: 8px;
+  transition: all .2s;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 1px 1px 2px var(--grey-color-lighter);
+  border-radius: 555px;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color-dark);
+  border-radius: 555px;
+}
+
 /* slide-tabs */
 
 .tabs-nav.container {
   padding: 0;
 }
 
-.tabs-nav {
+.tabs-nav .tabs {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -77,6 +94,7 @@ nav ul li a.active {
 
 .tabs-container > div {
   width: 850px;
+  max-width: 100vw;
   display: block;
 }
 
@@ -535,26 +553,26 @@ p {
   margin: 36px 0;
 }
 
-.container .buttons-wrapper {
+.buttons-wrapper {
   display: flex;
 }
 
-.container .buttons-wrapper a {
+.buttons-wrapper a {
   flex: 1;
 }
 
-.container .buttons-wrapper a:not(:last-child) {
+.buttons-wrapper a:not(:last-child) {
   margin-right: 12px;
 }
 
-.container .filters-wrapper form {
+.filters-wrapper form {
   margin-top: 18px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-.container .filters-wrapper form > * {
+.filters-wrapper form > * {
   margin-bottom: 18px;
 }
 
