added underline decoration to the a tag in the subject-card

--- a/css/components.css
+++ b/css/components.css
@@ -727,6 +727,14 @@ h4 a:hover {
   max-width: 250px;
 }
 
+.subject-card a {
+  color: var(--primary-color-dark);
+}
+
+.subject-card a:hover {
+  text-decoration: underline;
+}
+
 /* teacher-card */
 
 .teacher-card {
