--- a/css/basic.css
+++ b/css/basic.css
@@ -27,6 +27,7 @@ a {
   --primary-color-dark: #C12D3A;
   --secondary-color: #ff8000;
   --tertiary-color: #129B51;
+  --info-color: #2d99c4;
   --grey-color: #3C3939;
   --grey-color-light: #575757;
   --grey-color-lighter: #898989;
