added the change section functionality to the symbols categories

--- a/css/symbols.css
+++ b/css/symbols.css
@@ -23,8 +23,16 @@
   background-color: var(--grey-color-transparent);
 }
 
+.symbols-header > *.active {
+  background-color: var(--grey-color-transparent);
+}
+
 .symbols-start,
 .symbols-header,
 .symbols-body {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
